2006-06-22  Emmanuele Bassi  <ebassi@openedhand.com>

	* python/clutter-base-types.defs: Remove ClutterActorTransform.

2006-06-13  Matthew Allum  <mallum@openedhand.com>

	* ChangeLog:
	* python/Makefile.am:
	* python/clutter-base-types.defs:
	* python/clutter-base.defs:
	* python/clutter.override:
	Rename element -> actor. 
	Disable video texture bindings as to build again.

2006-06-06  Matthew Allum  <mallum@openedhand.com>

	* python/clutter-base.defs:
	Add support for set/get_depth. Fix timeline declaration.

2006-06-05  Emmanuele Bassi  <ebassi@openedhand.com>

	* python/clutter-base-types.defs:
	* python/clutter-base.defs:
	* python/clutter.override: Wrap new API and objects.

2006-05-27  Emmanuele Bassi  <ebassi@openedhand.com>

	* python/clutter-base.defs: Make static functions appear like
	package methods, e.g.: clutter_main() is clutter.main() and
	not clutter.clutter_main().  Changed functions are:
	    C name			  Python name
	  - clutter_main		- clutter.main
	  - clutter_stage		- clutter.stage
	  - clutter_want_debug		- clutter.want_debug
	  - clutter_redraw		- clutter.redraw
	  - clutter_threads_enter	- clutter.threads_enter
	  - clutter_threads_leave	- clutter.threads_leave
	
	* python/clutter.override: Ignore all X11 and GL related
	functions, as we don't have type definitions for them; fix typos
	and cut-and-paste errors; make the threads_enter and main static
	function use the pygobject threading facilities.

	* Makefile.am: Rework the build system.  The defs files have been
	split in two: clutter-base-types.def for the type declarations
	and clutter-base.defs for the methods and functions.  The python
	glue code depends on two auto-generated files: clutter.defs and
	clutter-types.defs; these two files includes the clutter-base
	files.  If the API changes, run "make update-defs": it will
	create a "clutter-api.defs" which should be hand-edited and
	the new sections added to the clutter-base files.  This is needed