@@ -1,5 +1,11 @@
 2006-06-22  Emmanuele Bassi  <ebassi@openedhand.com>
 
+	* python/Makefile.am:
+	* python/pyclutter.pc.in: Add a pkgconfig file in order to
+	check for bindings existence.
+
+2006-06-22  Emmanuele Bassi  <ebassi@openedhand.com>
+
 	* python/clutter-base-types.defs: Remove ClutterActorTransform.
 
 2006-06-13  Matthew Allum  <mallum@openedhand.com>
